# oomph-lib

./: .gitignore  CMakeLists.txt  README.md  cmake_autogen.sh
cmake/: OomphInstallLibrary.cmake  OomphLibraryConfig.cmake  oomphConfig.cmake.in
demo_drivers/: Makefile  Makefile.in  index.html
demo_drivers/FAQ/: Makefile  Makefile.in  index.html
demo_drivers/advection_diffusion/: Makefile  Makefile.in  index.html
demo_drivers/all_foeppl_von_karman/: Makefile  Makefile.in  index.html
demo_drivers/axisym_advection_diffusion/: Makefile  Makefile.in  index.html
demo_drivers/axisym_displ_based_foeppl_von_karman/: Makefile  Makefile.in  index.html
demo_drivers/axisym_foeppl_von_karman/: Makefile  Makefile.in  index.html
demo_drivers/axisym_linear_elasticity/: Makefile  Makefile.in  index.html
demo_drivers/axisym_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/axisym_poroelasticity/: Makefile  Makefile.in  index.html
demo_drivers/beam/: Makefile  Makefile.in  index.html
demo_drivers/bifurcation_tracking/: Makefile  Makefile.in  index.html
demo_drivers/biharmonic/: Makefile  Makefile.in  index.html
demo_drivers/darcy/: Makefile  Makefile.in  index.html
demo_drivers/eigenproblems/: Makefile  Makefile.in  index.html
demo_drivers/extrude_quad_mesh_to_cube_mesh/: Makefile  Makefile.in  index.html
demo_drivers/flux_transport/: Makefile  Makefile.in  index.html
demo_drivers/foeppl_von_karman/: Makefile  Makefile.in  index.html
demo_drivers/fourier_decomposed_helmholtz/: Makefile  Makefile.in  index.html
demo_drivers/generalised_newtonian_axisym_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/generalised_newtonian_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/heat_transfer_and_melting/: Makefile  Makefile.in  index.html
demo_drivers/helmholtz/: Makefile  Makefile.in  index.html
demo_drivers/homogenisation/: Makefile  Makefile.in  index.html
demo_drivers/interaction/: Makefile  Makefile.in  index.html
demo_drivers/linear_elasticity/: Makefile  Makefile.in  index.html
demo_drivers/linear_solvers/: Makefile  Makefile.in  index.html
demo_drivers/linear_wave/: Makefile  Makefile.in  index.html
demo_drivers/linearised_axisym_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/linearised_free_surface_axisym_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/linking/: Makefile  Makefile.in  index.html
demo_drivers/meshing/: Makefile  Makefile.in  index.html
demo_drivers/mpi/: Makefile  Makefile.in  index.html
demo_drivers/multi_physics/: Makefile  Makefile.in  index.html
demo_drivers/multigrid/: Makefile  Makefile.in  index.html
demo_drivers/navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/ode/: Makefile  Makefile.in  index.html
demo_drivers/optimisation/: Makefile  Makefile.in  index.html
demo_drivers/pml_fourier_decomposed_helmholtz/: Makefile  Makefile.in  index.html
demo_drivers/pml_helmholtz/: Makefile  Makefile.in  index.html
demo_drivers/pml_time_harmonic_linear_elasticity/: Makefile  Makefile.in  index.html
demo_drivers/poisson/: Makefile  Makefile.in  index.html
demo_drivers/polar_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/reaction_diffusion/: Makefile  Makefile.in  index.html
demo_drivers/shell/: Makefile  Makefile.in  index.html
demo_drivers/solid/: Makefile  Makefile.in  index.html
demo_drivers/spherical_advection_diffusion/: Makefile  Makefile.in  index.html
demo_drivers/spherical_navier_stokes/: Makefile  Makefile.in  index.html
demo_drivers/steady_axisym_advection_diffusion/: Makefile  Makefile.in  index.html
demo_drivers/time_harmonic_fourier_decomposed_linear_elasticity/: Makefile  Makefile.in  index.html
demo_drivers/time_harmonic_linear_elasticity/: Makefile  Makefile.in  index.html
demo_drivers/unsteady_heat/: Makefile  Makefile.in  (+1 more)
doc/: Makefile  Makefile.in
external_src/: Makefile  Makefile.in
self_test/: Makefile  Makefile.in
src/: Makefile  Makefile.in
user_drivers/: Makefile  Makefile.in
user_src/: Makefile  Makefile.in
(+18915 files in other folders)
